--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 buildscript {
     ext {
-        compose_version = '1.0.1'
+        compose_version = '1.1.1'
+        nav_version = '2.4.1'
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+}
+
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
