--- a/redactable/build.gradle
+++ b/redactable/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'maven-publish'
 }
 
 android {
@@ -32,6 +33,20 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
+    }
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                groupId = 'com.github.JustinGuedes'
+                artifactId = 'redactable'
+                version = '0.1.0'
+            }
+        }
     }
 }
 
